--- a/src/Lou-Parslow.Blazor.Server.Demo/appsettings.json
+++ b/src/Lou-Parslow.Blazor.Server.Demo/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "louparslowgmail.onmicrosoft.com",
+    "TenantId": "0520d39c-3412-4086-b59b-bcd6aed60f47",
+    "ClientId": "973b1277-7229-4b05-92d1-1d7b31c6778c",
+    "CallbackPath": "/signin-oidc"
+  }
 }
+
