--- a/src/Lou-Parslow.Blazor.Server.Demo/Lou-Parslow.Blazor.Server.Demo.csproj
+++ b/src/Lou-Parslow.Blazor.Server.Demo/Lou-Parslow.Blazor.Server.Demo.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Lou_Parslow.Blazor.Server.Demo</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.2.1" />
+  </ItemGroup>
+
 </Project>
